
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2003 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVS-HEAD

  - (none)

ngIRCd 0.7.0
  - The KILL comand verifies and logs more parameters.

  ngIRCd 0.7.0-pre2
  - CVS build system fixes (made autogen.sh more portable).
  - Fixed compilation and test-suite on Solaris (tested with 2.6).
  - New documentation file "doc/Platforms.txt" describing the status of
    ngIRCd on the various tested platforms.
  - Test for broken GCC on Mac OS X and disable "-pedantic" in this case.
  - Disable "-ansi" on Cygwin: system headers are incompatible.
  - The server tried to connect to other servers only once when DNS or
    socket failures occured.
  - Fixed --configtest: There is no variable "ServerPwd", it's "Password".

  ngIRCd 0.7.0-pre1 (2003-04-22)
  - New signal handler (more secure, actions are executed outside).
  - GCC: the compiler is now called with more warning options enabled.
  - Replaced a lot of str[n]cpy(), str[n]cat() and sprintf() calls with the
    more secure functions strlcpy(), strlcat() and snprintf(). On systems
    that don't support strlcpy() and strlcat(), these functions are included
    in the libngportab now (with prototypes in portab.h).
  - If the server can't close a socket, it panics now. This is an error that
    can't occur during normal operation so there is something broken.
  - The order of log messages during disconnects is more "natural" now ;-)
  - Cleaned up handling of server configuration structures: modifying and
    removing servers during runtime works more reliable now.
  - Compression code from "conn.[ch]" is now found in new "conn-zip.[ch]"
  - Moved some connection functions from "conn.[ch]" to "conn-func.[ch]".