@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.21 2003/04/27 11:45:27 alex Exp $
+# $Id: sample-ngircd.conf,v 1.22 2003/04/29 12:36:09 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must adept to
@@ -16,7 +16,8 @@
 	# configuration of the server, like the server name and the ports
 	# on which the server should be listening.
 	
-	# Server name in the IRC-network
+	# Server name in the IRC network, must contain at least one dot
+	# (".") and be unique in the IRC network.
 	Name = irc.the.net
 	
 	# Info text of the server. This will be shown by WHOIS and
