@@ -15,6 +15,7 @@ ngIRCd CVS-HEAD
   - (none)
 
 ngIRCd 0.7.0
+  - "ServerName" is checked better now: a dot (".") is required.
   - The KILL comand verifies and logs more parameters.
 
   ngIRCd 0.7.0-pre2
@@ -450,4 +451,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.199 2003/04/29 12:19:20 alex Exp $
+$Id: ChangeLog,v 1.200 2003/04/29 12:36:09 alex Exp $
